--- a/css/style.concat.css
+++ b/css/style.concat.css
@@ -463,7 +463,7 @@ Responsiveness update order: Base + Typography -> General layout + Grid -> Page 
 body {
   box-sizing: border-box;
   padding: 3rem; }
-  @media (max-width: 75em) {
+  @media only screen and (max-width: 75em) {
     body {
       padding: 0; } }
 
@@ -475,13 +475,7 @@ body {
   padding: 0;
   /* Inherited */
   /* box-sizing: border-box; */
-  box-sizing: inherit;
-  -webkit-user-select: none;
-  /* Safari */
-  -ms-user-select: none;
-  /* IE 10 and IE 11 */
-  user-select: none;
-  /* Standard syntax */ }
+  box-sizing: inherit; }
 
 /* Is used for root properties */
 html {
@@ -489,15 +483,19 @@ html {
        Asumming that browsser default is 16px then our 1rem will be 10px.
     */
   font-size: 62.5%; }
-  @media (min-width: 112.5em) {
+  @media only screen and (min-width: 112.5em) {
     html {
       font-size: 75%; } }
-  @media (max-width: 75em) {
+  @media only screen and (max-width: 75em) {
     html {
       font-size: 56.25%; } }
-  @media (max-width: 56.25em) {
+  @media only screen and (max-width: 56.25em) {
     html {
       font-size: 50%; } }
+
+::selection {
+  background-color: #55c57a;
+  color: #fff; }
 
 @keyframes logo-move-in {
   0% {
@@ -514,12 +512,22 @@ html {
 @keyframes moveInLeft {
   0% {
     opacity: 0;
-    transform: translateX(-10rem); }
+    transform: translate(-10rem); }
   80% {
-    transform: translate(1rem); }
+    transform: translate(2rem); }
   100% {
     opacity: 1;
-    transform: translate(0); } }
+    transform: translateX(0); } }
+
+@keyframes moveInRight {
+  0% {
+    opacity: 0;
+    transform: translate(10rem); }
+  80% {
+    transform: translate(-2rem); }
+  100% {
+    transform: translate(0);
+    opacity: 1; } }
 
 @keyframes move-in-bottom {
   0% {
@@ -557,6 +565,7 @@ body {
   margin-bottom: 6rem; }
   .heading-primary--main {
     display: block;
+    text-align: center;
     font-size: 6rem;
     font-weight: 400;
     letter-spacing: 3.5rem;
@@ -567,16 +576,19 @@ body {
         animation-iteration-count: 3;
         animation-delay: 3s; 
         */ }
-    @media (max-width: 37.5em) {
+    @media only screen and (max-width: 37.5em) {
       .heading-primary--main {
         letter-spacing: 1rem;
         font-size: 5rem; } }
   .heading-primary--sub {
     display: block;
-    font-size: 2rem;
+    text-align: center;
+    font-size: 1.9rem;
     font-weight: 700;
-    letter-spacing: 1.7rem; }
-    @media (max-width: 37.5em) {
+    letter-spacing: 1.7rem;
+    animation-name: moveInRight;
+    animation-duration: .8s; }
+    @media only screen and (max-width: 37.5em) {
       .heading-primary--sub {
         letter-spacing: .5rem; } }
 
@@ -591,10 +603,10 @@ body {
   color: transparent;
   letter-spacing: 2px;
   transition: all .2s; }
-  @media (max-width: 56.25em) {
+  @media only screen and (max-width: 56.25em) {
     .heading-secondary {
       font-size: 3rem; } }
-  @media (max-width: 37.5em) {
+  @media only screen and (max-width: 37.5em) {
     .heading-secondary {
       font-size: 2.5rem; } }
   .heading-secondary:hover {
@@ -616,19 +628,19 @@ body {
 
 .u-margin-bottom-big {
   margin-bottom: 8rem; }
-  @media (max-width: 56.25em) {
+  @media only screen and (max-width: 56.25em) {
     .u-margin-bottom-big {
       margin-bottom: 5rem; } }
 
 .u-margin-bottom-medium {
   margin-bottom: 4rem; }
-  @media (max-width: 56.25em) {
+  @media only screen and (max-width: 56.25em) {
     .u-margin-bottom-medium {
       margin-bottom: 3rem; } }
 
 .u-padding-bottom-medium {
   padding-bottom: 4rem; }
-  @media (max-width: 56.25em) {
+  @media only screen and (max-width: 56.25em) {
     .u-padding-bottom-medium {
       padding-bottom: 3rem; } }
 
@@ -637,13 +649,13 @@ body {
 
 .u-margin-top-big {
   margin-top: 8rem; }
-  @media (max-width: 56.25em) {
+  @media only screen and (max-width: 56.25em) {
     .u-margin-top-big {
       margin-top: 5rem; } }
 
 .u-margin-top-huge {
   margin-top: 10rem; }
-  @media (max-width: 37.5em) {
+  @media only screen and (max-width: 37.5em) {
     .u-margin-top-huge {
       margin-top: 5rem; } }
 
@@ -651,9 +663,12 @@ body {
   background-color: #f7f7f7;
   padding: 25rem 0;
   margin-top: -25vh; }
-  @media (max-width: 56.25em) {
+  @media only screen and (max-width: 56.25em) {
     .section-about {
-      padding: 25rem 0; } }
+      padding: 40rem 0 25rem; } }
+  @media only screen and (max-width: 37.5em) {
+    .section-about {
+      padding: 30rem 0; } }
 
 .section-features {
   padding: 20rem 0;
@@ -663,7 +678,7 @@ body {
   margin-top: -10rem; }
   .section-features > * {
     transform: skewY(7deg); }
-  @media (max-width: 56.25em) {
+  @media only screen and (max-width: 56.25em) {
     .section-features {
       padding: 15rem 0 10rem; } }
 
@@ -671,7 +686,7 @@ body {
   background-color: #f7f7f7;
   padding: 25rem 0 15rem;
   margin-top: -10rem; }
-  @media (max-width: 56.25em) {
+  @media only screen and (max-width: 56.25em) {
     .section-tours {
       padding: 18rem 0 10rem; } }
 
@@ -679,7 +694,7 @@ body {
   background-color: #f7f7f7;
   padding: 15rem 0;
   position: relative; }
-  @media (max-width: 56.25em) {
+  @media only screen and (max-width: 56.25em) {
     .section-stories {
       padding: 10rem 0; } }
   .section-stories__heading {
@@ -690,7 +705,7 @@ body {
 .section-booking {
   padding: 15rem 0;
   background-image: linear-gradient(to right bottom, #7ed56f, #28b485); }
-  @media (max-width: 56.25em) {
+  @media only screen and (max-width: 56.25em) {
     .section-booking {
       padding: 10rem 0; } }
 
@@ -700,16 +715,19 @@ body {
   border-radius: 3px;
   box-shadow: 0 1.5rem 4rem rgba(0, 0, 0, 0.2);
   height: 50rem; }
-  @media (max-width: 56.25em) {
+  @media only screen and (max-width: 56.25em) {
     .book {
       background-image: linear-gradient(105deg, rgba(255, 255, 255, 0.85) 100%, transparent 100% 100%), url(../img/nat-10.jpg);
       height: 55rem; } }
   .book__form {
     width: 50%;
     padding: 6rem; }
-    @media (max-width: 56.25em) {
+    @media only screen and (max-width: 56.25em) {
       .book__form {
         width: 100%;
+        padding: 6rem 2rem; } }
+    @media only screen and (max-width: 75em) {
+      .book__form {
         padding: 6rem 2rem; } }
 
 /* Text End */
@@ -788,7 +806,7 @@ body {
     transition: all .2s;
     z-index: 10;
     outline-offset: 2rem; }
-    @media (max-width: 56.25em) {
+    @media only screen and (max-width: 56.25em) {
       .composition__photo {
         float: left;
         position: relative;
@@ -797,14 +815,14 @@ body {
     .composition__photo--p1 {
       left: 0;
       top: -2rem; }
-      @media (max-width: 56.25em) {
+      @media only screen and (max-width: 56.25em) {
         .composition__photo--p1 {
           top: 0;
           transform: scale(1.2); } }
     .composition__photo--p2 {
       top: 2rem;
       right: 0; }
-      @media (max-width: 56.25em) {
+      @media only screen and (max-width: 56.25em) {
         .composition__photo--p2 {
           top: -1rem;
           transform: scale(1.3);
@@ -812,7 +830,7 @@ body {
     .composition__photo--p3 {
       top: 10rem;
       left: 20%; }
-      @media (max-width: 56.25em) {
+      @media only screen and (max-width: 56.25em) {
         .composition__photo--p3 {
           top: 1rem;
           left: 0;
@@ -824,7 +842,7 @@ body {
       outline: 1.5rem solid #55c57a; }
       .composition__photo:hover ~ img {
         transform: scale(0.95); }
-      @media (max-width: 56.25em) {
+      @media only screen and (max-width: 56.25em) {
         .composition__photo:hover {
           transform: scale(1.4);
           z-index: 1001; } }
@@ -939,7 +957,7 @@ body {
   .card__price-value {
     font-size: 6rem;
     font-weight: 100; }
-  @media (max-width: 56.25em) {
+  @media only screen and (max-width: 56.25em), only screen and (hover: none) {
     .card {
       height: auto;
       box-shadow: 0 1.5rem 4rem rgba(0, 0, 0, 0.15); }
@@ -964,7 +982,7 @@ body {
         transform: rotateY(0); }
       .card__price {
         margin-bottom: 4rem; } }
-  @media (max-width: 37.5em) {
+  @media only screen and (max-width: 37.5em) {
     .card__header {
       width: 90%; }
       .card__header--3 {
@@ -981,7 +999,7 @@ body {
   position: relative;
   transform: skewX(-7deg);
   transition: all .8s; }
-  @media (max-width: 75em) {
+  @media only screen and (max-width: 75em) {
     .story-card {
       width: 100%;
       transform: skewX(0); } }
@@ -993,10 +1011,10 @@ body {
     shape-outside: circle(50% at 50% 50%);
     clip-path: circle(50% at 50% 50%);
     margin-right: 4rem; }
-    @media (max-width: 75em) {
+    @media only screen and (max-width: 75em) {
       .story-card__shape {
         transform: skewX(0); } }
-    @media (max-width: 37.5em) {
+    @media only screen and (max-width: 37.5em) {
       .story-card__shape {
         display: block;
         float: initial;
@@ -1015,7 +1033,7 @@ body {
     transform: translate(-50%, -50%);
     visibility: hidden;
     color: #fff; }
-  @media (max-width: 37.5em) {
+  @media only screen and (max-width: 37.5em) {
     .story-card__text {
       padding-top: 3rem;
       display: block;
@@ -1052,7 +1070,7 @@ body {
   background-color: rgba(255, 255, 255, 0.6);
   border-bottom: 3px solid transparent;
   transition: all .3s; }
-  @media (max-width: 75em) {
+  @media only screen and (max-width: 75em) {
     .form__input {
       width: 100%; } }
   .form__input:focus {
@@ -1080,7 +1098,7 @@ body {
 .form__radio-group {
   width: 48%;
   display: inline-block; }
-  @media (max-width: 56.25em) {
+  @media only screen and (max-width: 56.25em) {
     .form__radio-group {
       margin-top: 2rem;
       display: block; } }
@@ -1122,7 +1140,7 @@ body {
     transform: translate(-50%, -50%);
     background-color: #55c57a; }
 
-@media (max-width: 56.25em) {
+@media only screen and (max-width: 56.25em) {
   .form__btn-wrap {
     padding-top: 2rem; } }
 
@@ -1145,13 +1163,20 @@ body {
     position: relative;
     background-color: #fff;
     width: 70%;
+    max-width: 100rem;
     margin: auto;
     margin-top: 12rem;
     box-shadow: 0 2rem 4rem rgba(0, 0, 0, 0.2);
     border-radius: 3px;
     opacity: 0;
     transform: scale(0.3);
-    transition: all .5s .2s; }
+    transition: all .5s .2s;
+    overflow: auto; }
+    @media only screen and (max-width: 37.5em) {
+      .popup__content {
+        width: 90%;
+        padding-top: 3rem;
+        margin-top: 2rem; } }
   .popup:target .popup__content {
     opacity: 1;
     transform: scale(1); }
@@ -1161,16 +1186,29 @@ body {
     position: absolute;
     top: 1rem;
     right: 2rem;
-    text-decoration: none; }
+    text-decoration: none;
+    z-index: 2002; }
     .popup__close:hover, .popup__close:focus {
       color: #55c57a;
       cursor: pointer; }
+  .popup__row {
+    position: relative; }
+  .popup__img-wraper {
+    float: left;
+    width: 33.33333%; }
+    @media only screen and (max-width: 75em) {
+      .popup__img-wraper {
+        display: none; } }
   .popup__img {
     display: block;
-    width: 100%;
-    height: 50%; }
+    width: 100%; }
   .popup__text-wraper {
-    padding: 2rem 3rem 2rem 0; }
+    width: 65%;
+    float: right;
+    padding: 3rem 2rem; }
+    @media only screen and (max-width: 75em) {
+      .popup__text-wraper {
+        width: 100%; } }
   .popup__heading2-wraper {
     padding-bottom: 1.5rem; }
   .popup__heading3-wraper {
@@ -1181,8 +1219,14 @@ body {
     column-count: 2;
     column-rule: 1px solid #eee;
     hyphens: auto; }
+    @media only screen and (max-width: 37.5em) {
+      .popup__paragraph-wraper {
+        column-count: 1; } }
   .popup__btn-wraper {
-    padding-top: 3rem; }
+    padding-top: 4rem; }
+    @media only screen and (max-width: 37.5em) {
+      .popup__btn-wraper {
+        text-align: center; } }
 
 .header {
   height: 95vh;
@@ -1193,10 +1237,10 @@ body {
   position: relative;
   /* So that .logo-box relative would work */
   clip-path: polygon(0 0, 100% 0, 100% 75vh, 0 100%); }
-  @media (min-resolution: 192dpi) and (min-width: 37.5em), (min-width: 125em) {
+  @media only screen and (min-resolution: 192dpi) and (min-width: 37.5em), only screen and (min-width: 125em) {
     .header {
       background-image: linear-gradient(to right bottom, rgba(126, 213, 111, 0.8), rgba(40, 180, 133, 0.8)), url(../img/hero.jpg); } }
-  @media (max-width: 37.5em) {
+  @media only screen and (max-width: 56.25em) {
     .header {
       clip-path: polygon(0 0, 100% 0, 100% 85vh, 0 100%); } }
   .header__logo-box {
@@ -1204,7 +1248,8 @@ body {
     top: 4rem;
     left: 4rem; }
   .header__logo {
-    height: 3.5rem; }
+    height: 3.5rem;
+    user-select: none; }
   .header__logo-box:hover .header__logo {
     animation-name: logo-move-in;
     animation-duration: 1s;
@@ -1224,13 +1269,13 @@ body {
   color: #fff;
   padding: 10rem 0;
   font-size: 1.4rem; }
-  @media (max-width: 75em) {
+  @media only screen and (max-width: 75em) {
     .footer {
       padding: 5rem 2rem; } }
   .footer__logo-box {
     text-align: center;
     margin-bottom: 8rem; }
-    @media (max-width: 56.25em) {
+    @media only screen and (max-width: 56.25em) {
       .footer__logo-box {
         margin-bottom: 5rem; } }
   .footer__logo {
@@ -1239,7 +1284,7 @@ body {
     display: inline-block;
     padding-top: 2rem;
     border-top: 1px solid #777; }
-    @media (max-width: 56.25em) {
+    @media only screen and (max-width: 56.25em) {
       .footer__navigation {
         width: 100%;
         text-align: center; } }
@@ -1265,7 +1310,7 @@ body {
     float: right;
     padding-top: 2rem;
     border-top: 1px solid #777; }
-    @media (max-width: 56.25em) {
+    @media only screen and (max-width: 56.25em) {
       .footer__copyright {
         width: 100%;
         text-align: center; } }
@@ -1273,9 +1318,12 @@ body {
 .row {
   max-width: 114rem;
   margin: 0 auto; }
-  @media (max-width: 56.25em) {
+  @media only screen and (max-width: 56.25em) {
     .row {
       max-width: 50rem;
+      padding: 0 3rem; } }
+  @media only screen and (max-width: 75em) {
+    .row {
       padding: 0 3rem; } }
   .row::after {
     content: "";
@@ -1283,18 +1331,18 @@ body {
     clear: both; }
   .row:not(:last-child) {
     margin-bottom: 8rem; }
-    @media (max-width: 56.25em) {
+    @media only screen and (max-width: 56.25em) {
       .row:not(:last-child) {
         margin-bottom: 6rem; } }
   .row [class^="col-"] {
     float: left; }
     .row [class^="col-"]:not(:last-child) {
       margin-right: 6rem; }
-      @media (max-width: 56.25em) {
+      @media only screen and (max-width: 56.25em) {
         .row [class^="col-"]:not(:last-child) {
           margin-right: 0;
           margin-bottom: 6rem; } }
-    @media (max-width: 56.25em) {
+    @media only screen and (max-width: 56.25em) {
       .row [class^="col-"] {
         width: 100% !important; } }
   .row .col-1-of-2 {
@@ -1325,7 +1373,7 @@ body {
   z-index: 2000;
   box-shadow: 0 1rem 3rem rgba(0, 0, 0, 0.1);
   text-align: center; }
-  @media (max-width: 56.25em) {
+  @media only screen and (max-width: 56.25em) {
     .navigation__btn {
       top: 3rem;
       right: 3rem; } }
@@ -1337,6 +1385,9 @@ body {
   opacity: 1;
   width: 100%; }
 
+.navigation__checkbox:checked ~ .navigation__nav > ul > li {
+  display: block; }
+
 .navigation__background {
   width: 6rem;
   height: 6rem;
@@ -1347,7 +1398,7 @@ body {
   background-image: radial-gradient(#7ed56f, #28b485);
   z-index: 1000;
   transition: transform 0.7s cubic-bezier(0.86, 0, 0.07, 1); }
-  @media (max-width: 56.25em) {
+  @media only screen and (max-width: 56.25em) {
     .navigation__background {
       top: 3.3rem;
       right: 3.3rem; } }
@@ -1372,7 +1423,8 @@ body {
   text-align: center; }
 
 .navigation__item {
-  margin: 1.5rem; }
+  margin: 1.5rem;
+  display: none; }
 
 .navigation__link:link, .navigation__link:visited {
   font-size: 3rem;
@@ -1400,8 +1452,11 @@ body {
   .navigation__icon, .navigation__icon:before, .navigation__icon::after {
     display: inline-block;
     width: 3rem;
-    height: 1px;
-    background-color: #333; }
+    height: 2px;
+    background-color: #333;
+    user-select: none; }
+  .navigation__icon:before {
+    height: 2px; }
   .navigation__icon:before, .navigation__icon::after {
     content: "";
     position: absolute;
@@ -1420,7 +1475,6 @@ body {
   top: -1rem; }
 
 .navigation__btn:hover .navigation__icon::after {
-  height: 1.5px;
   top: 1rem; }
 
 .navigation__checkbox:checked + .navigation__btn .navigation__icon {
